Remove Google Cloud credentials from repository

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Thumbs.db
 
 # Generated PDFs (optional - remove if you want to track them)
 generated-reports/
+vald-ref-data-copy-0c0792ad4944.json
