Fix build command and add better error logging for missing client build
- Split build command into multiple lines for better Render compatibility
- Add filesystem checks to verify client build exists
- Provide clear error messages if build is missing
- Graceful fallback if index.html not found

--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,12 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install && cd client && npm install && npm run build && cd ..
+    buildCommand: |
+      npm install
+      cd client
+      npm install
+      npm run build
+      cd ..
     startCommand: npm run server
     healthCheckPath: /health
     envVars:
