--- a/render.yaml
+++ b/render.yaml
@@ -14,12 +14,7 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: |
-      npm install
-      cd client
-      npm install
-      npm run build
-      cd ..
+    buildCommand: npm install && npm run build
     startCommand: npm run server
     healthCheckPath: /health
     envVars:
