--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "node server/index.js",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install --production=false && npm run build",
     "start": "node server/index.js",
     "sync-percentiles": "node server/scripts/syncPercentiles.js",
     "test": "echo \"Error: no test specified\" && exit 1"
