--- a/render.yaml
+++ b/render.yaml
@@ -11,10 +11,11 @@ services:
   # Backend API Server
   - type: web
     name: push-performance-api
-    env: docker
+    env: node
     region: oregon
     plan: starter
-    dockerfilePath: ./Dockerfile
+    buildCommand: npm install && npx puppeteer browsers install chrome && npm run build
+    startCommand: npm run server
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -91,15 +92,3 @@ services:
       # Percentile Sync Schedule
       - key: PERCENTILE_SYNC_SCHEDULE
         value: "0 3 * * *"
-
-      # Puppeteer Configuration
-      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: "false"
-      - key: PUPPETEER_EXECUTABLE_PATH
-        value: /usr/bin/chromium-browser
-
-    # Disk for Puppeteer cache
-    disk:
-      name: puppeteer-cache
-      mountPath: /opt/render/.cache
-      sizeGB: 1
