--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install && npx puppeteer browsers install chrome && npm run build
+    buildCommand: bash build.sh
     startCommand: npm run server
     healthCheckPath: /health
     envVars:
