--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: bash build.sh
-    startCommand: npm run server
+    startCommand: npm start
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
